Replace a Function factory with a dedicated CreationPolicyAggregateFactory